--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/DSC-favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/DSC Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Dubai Services Consulting (DSC) - Professional consulting services for businesses in the UAE and Middle East.">
     <title>Dubai Services Consulting | Professional Business Consulting</title>
